Fix collapsing elements

--- a/src/media-queries.css
+++ b/src/media-queries.css
@@ -321,12 +321,6 @@ body.no-scroll {
 }
 
 @media (max-width: 768px) {
-  .benefits-container {
-    grid-template-rows: repeat(3, auto);
-  }
-}
-
-@media (max-width: 768px) {
   /* ? PLAN */
   .plan_grid-v2.is-right,
   .plan_grid-v2.is-left {
@@ -349,7 +343,10 @@ body.no-scroll {
   .form_component {
     padding: 4rem 2rem;
   }
-  /* ?BENEFITS */
+
+  /* ================== */
+  /* ? BENEFITS */
+  /* ================== */
 
   .benefits-container {
     grid-template-columns: 1fr;
@@ -359,27 +356,19 @@ body.no-scroll {
     place-items: unset;
   }
 
-  .benefit_lines {
-    display: none;
-  }
-
-  .is-track-top,
-  .is-track-bottom {
+  .benefit_wrapper.is-track-top,
+  .benefit_wrapper.is-track-bottom {
     display: flex;
-    /* flex: 1 0 100%; */
     flex-direction: column;
     gap: 1.5rem;
   }
 
-  .is-track-top {
+  .benefit_wrapper.is-track-top {
     grid-row: 1/2;
   }
 
-  .text-size-large.is-powerhouse-text {
-    /* border: 1px solid var(--neutral--700);
-    padding: 1rem 2rem;
-    border-radius: 8px;
-    background-color: #0c0d0d; */
+  .benefit_wrapper.is-track-bottom {
+    grid-row: 3/4;
   }
 
   .benefit_powerhouse {
@@ -392,6 +381,7 @@ body.no-scroll {
     align-self: center;
   }
 
+  /* ? BENEFITS - SVG */
   /* ! to check later */
   .benefit_lines {
     height: 100%;
@@ -407,12 +397,6 @@ body.no-scroll {
     justify-content: center;
     width: 100%;
     height: 100%;
-  }
-
-  /* !END */
-
-  .is-track-bottom {
-    grid-row: 3/4;
   }
 
   /* PROOF */
